5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1644_2445.log
== TEST (2019-04-07 17:48:46) 
-- CODE:
tc = float(input("Temperatura em Celsius: "))
tf = float(input("Temperatura em Fahrenheit: "))
F = 1.8*tc+32
C = tf-32/1.8

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tc = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:49:13) 
-- CODE:
tc = float(input("Temperatura em Celsius: "))
tf = float(input("Temperatura em Fahrenheit: "))
F = 1.8*tc+32
C = tf-32/1.8
print(F)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tc = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:50:34) 
-- CODE:
C = float(input("Temperatura em Celsius: "))
F = float(input("Temperatura em Fahrenheit: "))
tf = 1.8*C+32
tc = F-32/1.8
print(F)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    C = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:56:08) 
-- CODE:
medida = float(input("Digite a medida: "))
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == C):
	print(round(tf,2))
else:
	print(round(tc,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    medida = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:57:10) 
-- CODE:
medida = input("Digite a medida: "))
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == C):
	print(round(tf,2))
else:
	print(round(tc,2))

-- ERROR:
File "XXXX", line 1
    medida = input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:57:20) 
-- CODE:
medida = input("Digite a medida: ")
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == C):
	print(round(tf,2))
else:
	print(round(tc,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (medida == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:57:56) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == C):
	print(round(tf,2))
else:
	print(round(tc,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (medida == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:59:29) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:59:45) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:59:55) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))

-- EXECUTION TIME:
0.258635
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
302.22
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 18:00:13) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = 1.8*temp+32
tc = temp-32/1.8
if (medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 18:01:23) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = (1.8*temp)+32
tc = (temp-32)/1.8
if (medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 18:01:35) 
-- CODE:
medida = input("Digite a medida: (C/F) ")
temp = float(input("Temperatura: "))
tf = (1.8*temp)+32
tc = (temp-32)/1.8
if (medida == "C"):
	print(round(tf,2))
else:
	print(round(tc,2))

-- EXECUTION TIME:
0.204776
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
